--- a/app/views/surveys/_survey.html.erb
+++ b/app/views/surveys/_survey.html.erb
@@ -5,8 +5,8 @@
   </p>
 
   <p>
-    <strong>Description:</strong>
-    <%= survey.description %>
+    <strong>Purpose:</strong>
+    <%= survey.answer %>
   </p>
 
 </div>
