--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to surveys", surveys_path %>
+  <%= link_to "Back to surveys", surveys_path, class: "btn btn-secondary" %>
 </div>
