--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,20 @@
 <div class="container pt-5">
-  <%= link_to "Surveys", surveys_path, class: "btn btn-primary" %>
-  <%= link_to "Questions", questions_path, class: "btn btn-primary" %>
+  <h1>Welcome to Surveys Pro</H1>
+</div>
+
+<div class="row">
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Take A Survey</h5>
+        <p class="card-text">Will you be able to pass the test?</p>
+        <%= link_to "Surveys", surveys_path, class: "btn btn-primary" %>
+      </div>
+  </div>
+  <div class="card" style="width: 18rem; margin-left: 2rem">
+      <div class="card-body">
+        <h5 class="card-title">Questions</h5>
+        <p class="card-text">See What Questions there are.</p>
+        <%= link_to "Questions", questions_path, class: "btn btn-primary" %>
+      </div>
+  </div>
 </div>
