--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,17 +1,12 @@
 <div id="<%= dom_id question %>">
   <p>
-    <strong>Content:</strong>
+    <strong>Category:</strong>
     <%= question.content %>
   </p>
 
   <p>
     <strong>Survey:</strong>
     <%= question.survey_id %>
-  </p>
-
-  <p>
-    <strong>Answer:</strong>
-    <%= question.answer %>
   </p>
 
 </div>
