--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this question", @question %> |
-  <%= link_to "Back to questions", questions_path %>
+  <%= link_to "Show this question", questions_path, class: "btn btn-primary" %>
+  <%= link_to "Back to questions", questions_path, class: "btn btn-primary" %>
 </div>
