--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,9 +6,11 @@
   <% @questions.each do |question| %>
     <%= render question %>
     <p>
-      <%= link_to "Show this question", question %>
+      
+      <%= link_to "Show this question", question, class: "btn btn-info"%>
     </p>
   <% end %>
 </div>
-
-<%= link_to "New question", new_question_path %>
+<%= link_to "Survey Page", new_survey_path,class: "btn btn-primary " %>
+<%= link_to "Home", root_path, class: "btn btn-primary " %>
+<%= link_to "New question", new_question_path,class: "btn btn-primary" %>
