--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @question %>
 
 <div>
-  <%= link_to "Edit this question", edit_question_path(@question) %> |
-  <%= link_to "Back to questions", questions_path %>
+  <%= link_to "Edit this question", edit_question_path(@question), class: "btn btn-warning" %> |
+  <%= link_to "Back to questions", questions_path, class: "btn btn-info" %>
 
-  <%= button_to "Destroy this question", @question, method: :delete %>
+  <%= button_to "Destroy this question", @question, method: :delete ,class: "btn btn-danger"%>
 </div>
