--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this survey", @survey %> |
-  <%= link_to "Back to surveys", surveys_path %>
+  <%= link_to "Show this survey", @survey, class: "btn btn-primary" %> |
+  <%= link_to "Back to surveys", surveys_path, class: "btn btn-primary " %>
 </div>
