--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -3,8 +3,9 @@
 <%= render @survey %>
 
 <div>
-  <%= link_to "Edit this survey", edit_survey_path(@survey) %> |
-  <%= link_to "Back to surveys", surveys_path %>
-
-  <%= button_to "Destroy this survey", @survey, method: :delete %>
+  <%= link_to "Edit this survey", edit_survey_path(@survey), class:"btn btn-info" %> |
+  <%= link_to "Back to surveys", surveys_path, class:"btn btn-secondary" %>
+<div class="danger">
+  <%= button_to "Destroy this survey", @survey, method: :delete, class:"btn btn-danger" %>
+  </div>
 </div>
